--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <img id="grid" src="./img/grid.jpg" style="display: none; width: 0; height: 0;">
+    <img id="top" src="./img/top.png" style="display: none; width: 0; height: 0;">
+    <img id="bottom" src="./img/bottom.png" style="display: none; width: 0; height: 0;">
     <script src="./js/script.js" type="module"></script>
 </body>
 </html>
