--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
     <img id="stars" src="./img/stars.jpg" style="display: none; width: 0; height: 0;">
     <img id="sun" src="./img/sun.jpg" style="display: none; width: 0; height: 0;">
+    <img id="sunnorm" src="./img/sunNormal.png" style="display: none; width: 0; height: 0;">
 
     <img id="mercury" src="./img/mercury.jpg" style="display: none; width: 0; height: 0;">
     <img id="venus" src="./img/venus.jpg" style="display: none; width: 0; height: 0;">
